[package]
name = "quad-arcanoid"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = { version = "0.4.12", features = ["audio"] }
macroquad-particles = "0.2.1"

[patch.crates-io]
macroquad-particles = { git = "https://github.com/not-fl3/macroquad.git" }
macroquad = { git = "https://github.com/not-fl3/macroquad.git" }