[package]
name = "quad-arcanoid"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
macroquad = { version = "0.4.13", features = ["audio"] }
macroquad-particles = "0.2.1"

[patch.crates-io]
macroquad-particles = { git = "https://github.com/not-fl3/macroquad.git", rev = "68e436d4ae954a4ecc18beeeb1a6d2a6f1ddb0d5" }
macroquad = { git = "https://github.com/not-fl3/macroquad.git", rev = "68e436d4ae954a4ecc18beeeb1a6d2a6f1ddb0d5" }

[profile.release]
opt-level = 3
codegen-units = 1 # Compile the entire crate as one unit. marginal improvements.
lto = "thin"      # Do a second optimization pass over the entire program, including dependencies. marginal improvements.

[profile.wasm-release]
inherits = "release" # Use release profile as default values.
opt-level = "z"      # Optimize with size in mind (also try "s", sometimes it is better).
strip = true  # Strip all debugging information from the binary to reduce file size.
